--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <div class="container">
+        <!-- Wallet connection button -->
+        <div class="wallet-section">
+            <button id="connect-wallet-btn" class="wallet-btn">Connect Wallet</button>
+            <div id="wallet-info" class="wallet-info" style="display: none;">
+                <span id="wallet-address" class="wallet-address"></span>
+                <button id="disconnect-wallet-btn" class="disconnect-btn">Disconnect</button>
+            </div>
+        </div>
+
         <!-- Loading indicator -->
         <div id="loading" class="loading">
             <div class="spinner"></div>
@@ -31,7 +40,7 @@
             </div>
 
             <div class="walrus-container">
-                <img src="/resources/walrus_image.png" alt="Walrus" class="walrus-image" onerror="this.style.display='none'">
+                <img src="images/walrus_image.png" alt="Walrus" class="walrus-image" onerror="this.style.display='none'">
             </div>
 
             <div class="stats-grid">
@@ -54,18 +63,44 @@
                 </div>
             </div>
 
+            <!-- Shared Blob Lifetime Management section -->
+            <div id="shared-blob-section" class="shared-blob-section">
+                <h2>💰 Shared Blob Lifetime Management</h2>
+                <div class="shared-blob-info">
+                    <p><strong>Shared Fund Balance:</strong> <span id="fund-balance" class="fund-value">Loading...</span> WAL</p>
+                    <p class="shared-blob-description">
+                        The archival system uses a shared fund to automatically extend the lifetime of shared blobs.
+                        Community members can deposit WAL tokens into this fund to support long-term archival storage.
+                    </p>
+                </div>
+
+                <!-- Contribution section -->
+                <div id="contribution-section" class="contribution-section">
+                    <h3>Contribute to the Fund</h3>
+                    <div class="contribution-form">
+                        <label for="contribution-amount">Amount (WAL):</label>
+                        <input type="number" id="contribution-amount" min="0" max="100" step="0.01" placeholder="Enter amount">
+                        <button id="contribute-btn" class="contribute-btn">Contribute</button>
+                    </div>
+                    <p class="contribution-note">
+                        <strong>Note:</strong> Experimental limit - maximum 100 WAL per contribution.
+                    </p>
+                    <div id="contribution-status" class="contribution-status"></div>
+                </div>
+            </div>
+
             <!-- Metadata section (dynamically populated) -->
             <div id="metadata-section" class="metadata-section"></div>
 
             <div class="links-section">
                 <div class="links-title">Quick Links</div>
 
-                <a href="/v1/blobs" class="link-card">
+                <a href="blobs.html" class="link-card">
                     <div class="link-title">📦 View All Blobs</div>
                     <div class="link-description">Browse all archived checkpoint blobs and their metadata</div>
                 </a>
 
-                <a href="/v1/checkpoint" class="link-card">
+                <a href="checkpoint.html" class="link-card">
                     <div class="link-title">🔍 Query Checkpoint</div>
                     <div class="link-description">Look up a specific checkpoint by number</div>
                 </a>
@@ -75,6 +110,6 @@
 
     <!-- Scripts -->
     <script src="js/config.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
