add public extending blobs functionality

--- a/website/blobs.html
+++ b/website/blobs.html
@@ -41,6 +41,10 @@
             border-left: 4px solid #667eea;
             font-size: 0.95em;
         }
+        .end-of-epoch-blob {
+            color: #dc3545;
+            font-weight: bold;
+        }
         .summary {
             margin-top: 20px;
             padding: 10px;
